gtk3: fix clearlooks-phenix unclickable scrollbar slider trough border

--- a/.config/gtk-3.0/gtk.css
+++ b/.config/gtk-3.0/gtk.css
@@ -6,6 +6,15 @@ scrollbar {
   -GtkRange-slider-width: 15;
 }
 
+/* fixes bug in Clearlooks-Phenix
+ * where clicking right edge of slider warp-scrolls
+ * instead of grabbing slider
+ */
+.scrollbar.vertical trough,
+scrollbar.vertical trough {
+  border-width: 1px 0px 2px 1px;
+}
+
 .scrollbar.vertical slider,
 scrollbar.vertical slider {
   min-width: 10px;
